# x402

./: .gitignore  CONTRIBUTING.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: check_package_lock.yml  publish_npm_scoped_x402_all.yml  publish_npm_scoped_x402_xrpl.yml
docs/: docs.json  faq.md  introduction.md  sdk-features.md
docs/advanced-concepts/: wallet-compatibility.mdx
docs/core-concepts/: network-and-token-support.mdx
docs/dev-tools/: facilitators.md
docs/extensions/: bazaar.mdx  builder-code.mdx
docs/getting-started/: quickstart-for-buyers.mdx  quickstart-for-sellers.mdx
docs/schemes/: batch-settlement.mdx  exact.mdx  overview.mdx
e2e/: .env-local  README.md  package.json  pnpm-lock.yaml  test.ts
e2e/mock-facilitator/: index.ts
e2e/scripts/: xrpl-iou-setup.ts
e2e/src/: sampling.ts  types.ts
examples/python/clients/sign-in-with-x/: README.md  main.py  pyproject.toml
examples/python/servers/sign-in-with-x/: README.md  main.py  pyproject.toml
examples/typescript/: README.md  pnpm-lock.yaml
go/: .env.example  CHANGELOG.md  client.go  client_test.go  go.mod  go.sum  interfaces.go
go/.changes/: v2.19.0.md
go/http/: server.go  server_test.go
python/x402/: CHANGELOG.md  README.md  __init__.py  client_base.py  pyproject.toml
scripts/: prepare-typescript-release.py  tag-typescript-release.py
specs/: x402-specification-v2.md
typescript/: package.json  pnpm-lock.yaml
typescript/.changeset/: add-igra-mainnet-default-stablecoin.md  algorand-caip2-network-ids.md  config.json  (+10 more)
(+247 files in other folders)
