[project]
name = "x402-sign-in-with-x-client-example"
version = "0.1.0"
description = "Example client for x402 sign-in-with-x extension"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.0",
    "x402[httpx,evm,svm,extensions]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
exclude-newer = "3 days"
package = false

[tool.uv.sources]
x402 = { path = "../../../../python/x402", editable = true }
