[project]
name = "x402-sign-in-with-x-server-example"
version = "0.1.0"
description = "Example server for x402 sign-in-with-x extension"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.0",
    "x402[fastapi,evm,svm,extensions]",
    "uvicorn[standard]>=0.40.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
exclude-newer = "3 days"
package = false

[tool.uv.sources]
x402 = { path = "../../../../python/x402", editable = true }
